--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
+    <div class="container">
         <ul class="list">
             <li>
                 <p>Lorem ipsum.</p>
