--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Beetroot Academy</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-<ul>
-    <li><a href="/lesson1">Lesson 1</a></li>
-    <li><a href="/lesson2">Lesson 2</a></li>
-</ul>
+    <div class="container">
+        <h1 class="title">Beetroot Academy Lessons</h1>
+        <img id="beetroot_img" src="https://i0.wp.com/cdn-prod.medicalnewstoday.com/content/images/articles/277/277432/raw-beetroot-on-a-wooden-surface.jpg?w=1155&h=1444" alt="Бурак">
+        <ul id="lessons_list" class="lessons_list">
+            <li class="list_item"><a href="/lesson1">Lesson 1</a></li>
+            <li class="list_item"><a href="/lesson2">Lesson 2</a></li>
+        </ul>
+    </div>
 </body>
 </html>
