new links added

--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -53,5 +53,9 @@
         </div>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut culpa cum cumque cupiditate deleniti dolor doloremque doloribus fuga, itaque laboriosam necessitatibus neque nihil pariatur possimus quae quam ratione recusandae rem repellat similique totam veniam voluptatibus. Ab amet architecto at autem eos et illo ipsa iste laborum laudantium maxime neque nobis, nostrum officiis provident sunt voluptatum. At consequatur cum deleniti dolores et eum facilis ipsa, magni, odit placeat provident quaerat quia similique tempore ut. Animi assumenda at culpa delectus distinctio dolore esse ex explicabo id ipsam, maxime, nulla obcaecati provident quidem sapiente veritatis voluptatibus. Adipisci aspernatur at cupiditate dolore dolorum ducimus earum facilis inventore iusto libero natus nostrum numquam obcaecati quibusdam quidem quis recusandae sint soluta, sunt, ullam veniam veritatis voluptatem voluptatum? Accusantium, architecto, voluptatem? Ab, deleniti hic minus nihil odit quis quo velit! Ad amet aut eaque eveniet excepturi, explicabo itaque maiores maxime officiis quaerat recusandae repellendus, saepe, voluptas!
     </div>
+
+    <div class="img-bg">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, nulla!</p>
+    </div>
 </body>
 </html>
